[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "othello-tkinter"
version = "1.0.0"
description = "Python と tkinter で作成したオセロ（リバーシ）ゲーム"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
keywords = ["othello", "reversi", "game", "tkinter", "gui"]
authors = [
    {name = "San"}
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Games/Entertainment :: Board Games",
]

[project.urls]
Homepage = "https://github.com/San/othello_tkinter"
Repository = "https://github.com/San/othello_tkinter.git"
Issues = "https://github.com/San/othello_tkinter/issues"

[project.scripts]
othello = "othello:main"

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "flake8>=6.0.0",
    "mypy>=1.0.0",
]

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true

[tool.flake8]
max-line-length = 100
exclude = [".git", "__pycache__", "build", "dist"]
